--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .heroButton {
+    @apply px-6 py-6 border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500
+    transition-all hover:border-[#eeeee4] hover:text-[#eeeee4]
+  }
+}
